--- a/CacheManage/app/build.gradle
+++ b/CacheManage/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     testCompile 'junit:junit:4.12'
     compile project(':library')
+//    compile 'com.github.ronghao:CacheManage:-SNAPSHOT'
 }
