--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,39 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+  repositories {
+    jcenter()
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:2.3.0'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+    // NOTE: Do not place your application dependencies here; they belong
+    // in the individual module build.gradle files
+  }
 }
 
 allprojects {
-    repositories {
-        jcenter()
-        maven { url 'https://jitpack.io' }
-    }
+  repositories {
+    jcenter()
+    maven { url 'https://jitpack.io' }
+  }
 }
 
 task clean(type: Delete) {
-    delete rootProject.buildDir
+  delete rootProject.buildDir
+}
+
+ext {
+  // Sdk and tools
+  build_tools_version = "25.0.3"
+  compile_sdk_version = 25
+  min_sdk_version = 14
+  target_sdk_version = 25
+
+  version_code = 2
+  version_name = '1.1.2'
+
+  // App dependencies
+  support_version = '27.1.0'
+  gson_version = '2.8.2'
 }
