--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,17 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-25.0.3
-    - android-25
+    - build-tools-26.0.2
+    - android-26
     - extra-android-m2repository
     - extra-google-m2repository
     - extra-android-support
     - extra-google-google_play_services
+    - extra-google-m2repository
+    - addon-google_apis-google-26
+
+    - sys-img-armeabi-v7a-android-26
+    - sys-img-armeabi-v7a-android-17
 licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
