--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-  compile project(':library')
-//    compile 'com.github.ronghao:CacheManage:1.3.0'
+//  compile project(':library')
+    compile 'com.github.ronghao:CacheManage:1.3.5'
     compile 'com.android.support:appcompat-v7:25.3.1'
 }
