--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,13 @@
 
 buildscript {
   repositories {
+    maven { url 'https://maven.aliyun.com/repository/public' }
+    maven { url 'https://maven.aliyun.com/repository/google' }
+    maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.3.0'
+    classpath "com.android.tools.build:gradle:4.1.2"
     classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
 
     // NOTE: Do not place your application dependencies here; they belong
@@ -17,6 +20,10 @@ allprojects {
   repositories {
     jcenter()
     maven { url 'https://jitpack.io' }
+    maven { url 'https://maven.aliyun.com/repository/public' }
+    maven { url 'https://maven.aliyun.com/repository/google' }
+    maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+    jcenter()
   }
 }
 
@@ -32,7 +39,7 @@ ext {
   target_sdk_version = 26
 
   version_code = 2
-  version_name = '1.3.0'
+  version_name = '1.3.5'
 
   // App dependencies
   support_version = '27.1.0'
